update: fix bugs with paralax overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -195,6 +195,7 @@ h3{
   z-index: -1;
   .super{
     visibility: visible;
+    overflow: hidden;
     position: fixed;
     margin: 0;
     padding: 0;
@@ -207,7 +208,9 @@ h3{
   }
   .min{
     //display: none;
+    overflow: hidden;
     visibility: hidden;
+    display: none;
 
   }
   
@@ -216,9 +219,11 @@ h3{
 @media screen and (max-width: $tablet) {
   .super{
     visibility: visible;
+    
   }
   .min{
     visibility: hidden;
+    display: block;
   }
 }
 
