--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -5,6 +5,7 @@
 */
 #hero{
   height: 100vh;
+  margin-bottom: 10em;
 }
 #intro {
   padding-top: 4.5rem;
