--- a/_sass/_masks.scss
+++ b/_sass/_masks.scss
@@ -3,6 +3,7 @@
 --hero parallax--
 -----------------
 */
+
 .pallarax-wrap {
   height: 150%;
   width: 100%;
@@ -18,7 +19,9 @@
     mask-image: url("../images/hero-def.svg");
     mask-size: 100%;
     mask-repeat: no-repeat;
-    height: 100%;
+    overflow-x: visible;
+    overflow-x: hidden;
+    height: 150%;
     width: 100%;
   }
 }
@@ -114,6 +117,7 @@
       height: 80vh;
       width: 100%;
       position: absolute;
+      overflow: hidden;
   
   
       .rectangle {
@@ -124,6 +128,7 @@
         mask-size: cover;
         height: 230vh;
         width: 100%;
+        overflow: hidden;
       }
   
     
